--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,38 +4,44 @@ on:
   push:
     branches: [ "main" ]
 
-env:
-  APP_DIR: /var/www/sara-music-card
-  PORT: "5000"
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install sshpass
-        run: sudo apt-get update && sudo apt-get install -y sshpass
-
-      - name: Deploy to server
-        run: |
-          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "
+      - name: Deploy to server (password)
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}        # 178.239.151.73
+          username: ${{ secrets.SSH_USER }}    # root
+          password: ${{ secrets.SSH_PASSWORD }}# Software@123456
+          script: |
             set -e
+            APP_DIR=/var/www/sara-music-card
+
+            # نیازمندی‌ها
+            command -v git >/dev/null || (apt-get update && apt-get install -y git)
+            command -v python3 >/dev/null || (apt-get update && apt-get install -y python3 python3-venv python3-pip)
+
+            # پوشه پروژه
             mkdir -p $APP_DIR
-            cd $APP_DIR
-            if [ ! -d .git ]; then
-              git clone https://github.com/${{ github.repository }} .
+
+            # کلون بار اول، بعد از آن pull
+            if [ ! -d "$APP_DIR/.git" ]; then
+              git clone https://github.com/${{ github.repository }} $APP_DIR
             else
-              git pull
+              cd $APP_DIR && git pull
             fi
-            command -v python3 >/dev/null 2>&1 || sudo apt-get install -y python3 python3-venv python3-pip git
+
+            cd $APP_DIR
             python3 -m venv venv || python -m venv venv
             . venv/bin/activate
             pip install -U pip
             [ -f requirements.txt ] && pip install -r requirements.txt || true
-            pkill -f 'python3 app.py' || true
+
+            # ری‌استارت ساده برنامه
+            pkill -f "python3 app.py" || true
             nohup python3 app.py > app.log 2>&1 &
-            echo 'Deployed OK'
-          "
- 
+            echo "✅ Deploy done"
