fix: background run for Flask app

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,4 +55,7 @@ jobs:
 
             pkill -f "python3 app.py" || true
             nohup python3 app.py > app.log 2>&1 &
+            disown
+            sleep 5
             echo "✅ Deploy done"
+            exit 0
