--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,24 +7,11 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # مرحله 1: فقط تست اتصال SSH
-      - name: SSH ping
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SSH_HOST }}       # 178.239.151.73
-          username: ${{ secrets.SSH_USER }}   # root
-          password: ${{ secrets.SSH_PASSWORD }} # Software@123456
-          port: 22
-          command_timeout: 15m
-          script: |
-            echo "Connected as $(whoami) on $(hostname)"
-            uname -a
-
-      # مرحله 2: دیپلوی فقط وقتی مرحله 1 موفق شد
       - name: Deploy to server
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -33,9 +20,11 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: 22
           command_timeout: 30m
+          script_stop: true
           script: |
             set -e
             APP_DIR=/var/www/sara-music-card
+            echo "🔧 Starting deploy on $APP_DIR"
 
             command -v git >/dev/null || (apt-get update && apt-get install -y git)
             command -v python3 >/dev/null || (apt-get update && apt-get install -y python3 python3-venv python3-pip)
@@ -53,9 +42,17 @@ jobs:
             pip install -U pip
             [ -f requirements.txt ] && pip install -r requirements.txt || true
 
+            # Flask app restart safely
             pkill -f "python3 app.py" || true
             nohup python3 app.py > app.log 2>&1 &
-            disown
             sleep 5
-            echo "✅ Deploy done"
+
+            if pgrep -f "python3 app.py" > /dev/null; then
+              echo "✅ Flask app running successfully!"
+            else
+              echo "❌ Flask app failed to start"
+              exit 1
+            fi
+
+            echo "🚀 Deploy finished successfully!"
             exit 0
